--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8d91ea3",
+   "id": "1e1046bb",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "68813bdf",
+   "id": "8115451c",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "911616f2",
+   "id": "fcdd22b0",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e78a1f73",
+   "id": "1b5c1071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc178e9",
+   "id": "c3cb27ea",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5738e2b6",
+   "id": "bc65ed1b",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cac8562",
+   "id": "1f2a1b74",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "85083e34",
+   "id": "3f5249cc",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c536e8ff",
+   "id": "71ce7623",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412ea325",
+   "id": "9f6ee29c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c6b07449",
+   "id": "1ac5d076",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2498c4df",
+   "id": "181df66e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7d50a431",
+   "id": "60b8b2a1",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "eab91abd",
+   "id": "6e522c46",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f3135cb3",
+   "id": "76b0292d",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbecea5",
+   "id": "8f4ebf57",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ac15fd1d",
+   "id": "8d9a3984",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9469b602",
+   "id": "63a0dabf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d978bb62",
+   "id": "b3de15df",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "aca61423",
+   "id": "f1a2bcab",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "043e8ecd",
+   "id": "fdf31a83",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "49a21e27",
+   "id": "e4f9a2be",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "849224e1",
+   "id": "ef54e62c",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3952b42d",
+   "id": "a9f5a905",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2920500d",
+   "id": "148aa312",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "05384842",
+   "id": "63c88c97",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0fa2b3d8",
+   "id": "a805c20b",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e8bbf3",
+   "id": "77df1556",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0b3498c3",
+   "id": "d48492f7",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9a8a48c7",
+   "id": "15667127",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d69c7f5b",
+   "id": "f21bccd7",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ed4eb4",
+   "id": "d3afc2f5",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "07eb7c4b",
+   "id": "71369d36",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "52d9d99e",
+   "id": "6932ec06",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab465f9",
+   "id": "fbf4ef15",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c03d862c",
+   "id": "fdade84d",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2415db20",
+   "id": "10f93499",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7641592a",
+   "id": "0e0b5419",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49069790",
+   "id": "604ff2b0",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bd6d9e85",
+   "id": "52f2c99d",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f878ff14",
+   "id": "1ceb8246",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28fac8a8",
+   "id": "e45f5300",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8024b011",
+   "id": "5850692b",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "795a5148",
+   "id": "f96b4256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6d604d19",
+   "id": "cab39bc8",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e759125",
+   "id": "8c0033e9",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3b61a01b",
+   "id": "5d9cd411",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9285d452",
+   "id": "51094903",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f0694231",
+   "id": "58d2d7fe",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ad306919",
+   "id": "5087445a",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96c13ec5",
+   "id": "820ac31b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dccdfb8",
+   "id": "8febc2e7",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5105fe14",
+   "id": "94dff52a",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "69955b02",
+   "id": "100a6ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1e67089f",
+   "id": "27782429",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b17f4233",
+   "id": "302c7d39",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c1d76845",
+   "id": "b97ea9f7",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a81f5fc4",
+   "id": "4cb5316b",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1c6ddd71",
+   "id": "71479460",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "400779df",
+   "id": "c2e88286",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "96e55888",
+   "id": "67407454",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "412c7a10",
+   "id": "ac1311fa",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3f2fed52",
+   "id": "06c2971b",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8c42f8e6",
+   "id": "68e6e5b5",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "cea31945",
+   "id": "48a30739",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "4b9e6880",
+   "id": "e5e13513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e69e7d00",
+   "id": "0420a93b",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2a0c253f",
+   "id": "3fdf7846",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5e01e4cf",
+   "id": "da947314",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c6737351",
+   "id": "38ba0f01",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2fe38660",
+   "id": "00c310c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "92082d31",
+   "id": "c2bc30dc",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "123c8803",
+   "id": "08596572",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "987d5008",
+   "id": "d7973e75",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "264b4b49",
+   "id": "d55e3e2d",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6236ac",
+   "id": "4d56d28c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "fedc494e",
+   "id": "614ff507",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "fc6d6d14",
+   "id": "24622e2a",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "49771720",
+   "id": "dfa4f53a",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "629ab9b8",
+   "id": "4428d63c",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "f9960cc2",
+   "id": "cc1dfcaf",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "9e1d13d2",
+   "id": "a3119c2a",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a16d8e4",
+   "id": "0ea12a23",
    "metadata": {},
    "source": [
     "# Mutable vs. immutable data\n",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f3f295d8",
+   "id": "f26fcb7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "28efd44e",
+   "id": "ecd8e4d4",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "de91432f",
+   "id": "5ea9e285",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "c2e42c00",
+   "id": "1a17d1f8",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "c75a61f1",
+   "id": "5131aa3f",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab2a1331",
+   "id": "9d27d7b0",
    "metadata": {},
    "source": [
     "# \"Changing\" is a bad term in Python\n",
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f0a6d2",
+   "id": "a2dec482",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d814ad63",
+   "id": "eee8ec53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534095da",
+   "id": "254e1df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "2bf7a0c2",
+   "id": "14547614",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399dcb36",
+   "id": "e427e5d1",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b39f5b",
+   "id": "5dacf305",
    "metadata": {},
    "source": [
     "# `break` vs. `continue`\n",
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dbbdfa",
+   "id": "682f5832",
    "metadata": {},
    "source": [
     "# Splitting\n",
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5f6ddc8e",
+   "id": "391356aa",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2db028eb",
+   "id": "edbea3bd",
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "00db8db7",
+   "id": "63a66a1a",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "a089327c",
+   "id": "0aa0fa27",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "10a34734",
+   "id": "9e40b8af",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179df899",
+   "id": "afa5650d",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2449,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c3384939",
+   "id": "8ae58d49",
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "cbed8535",
+   "id": "0617de36",
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a6da1c7b",
+   "id": "9b1d599b",
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a21e4dc",
+   "id": "104cd175",
    "metadata": {},
    "source": [
     "# From lists to strings with `str.join`\n",
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "9347b6a0",
+   "id": "9a270fc6",
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25a81ee",
+   "id": "0714dbe8",
    "metadata": {},
    "source": [
     "# Exercise: Pig Latin sentence\n",
@@ -2594,14 +2594,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20086c30",
+   "execution_count": 105,
+   "id": "0f929913",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: whatever\n",
+      "hateverway\n"
+     ]
+    }
+   ],
    "source": [
     "# program from last time\n",
-    "\n"
+    "\n",
+    "word = input('Enter a word: ').strip()\n",
+    "\n",
+    "if word[0] in 'aeiou':\n",
+    "    print(word + 'way')\n",
+    "else:\n",
+    "    print(word[1:] + word[0] + 'ay')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd400b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
