--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e1046bb",
+   "id": "cf0c2f7f",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8115451c",
+   "id": "e0812899",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fcdd22b0",
+   "id": "c5de55e3",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1b5c1071",
+   "id": "0db91356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3cb27ea",
+   "id": "035fc969",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bc65ed1b",
+   "id": "851834c2",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f2a1b74",
+   "id": "21805d6e",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3f5249cc",
+   "id": "a6c5f1ad",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ce7623",
+   "id": "43d2b213",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f6ee29c",
+   "id": "6ac08afe",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1ac5d076",
+   "id": "6fc18a91",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "181df66e",
+   "id": "a0a44c03",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "60b8b2a1",
+   "id": "599a4acd",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6e522c46",
+   "id": "335e161f",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "76b0292d",
+   "id": "8ac79d8c",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4ebf57",
+   "id": "63737fc6",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8d9a3984",
+   "id": "72c56057",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "63a0dabf",
+   "id": "890d2d40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b3de15df",
+   "id": "8c5be4fb",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f1a2bcab",
+   "id": "fdb90069",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fdf31a83",
+   "id": "d1ad5898",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e4f9a2be",
+   "id": "2581e329",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ef54e62c",
+   "id": "6b4f3720",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a9f5a905",
+   "id": "fd186492",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "148aa312",
+   "id": "1965649b",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "63c88c97",
+   "id": "174e51ec",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a805c20b",
+   "id": "828c12b9",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77df1556",
+   "id": "7c39878d",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d48492f7",
+   "id": "abb1a800",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "15667127",
+   "id": "06aabecf",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f21bccd7",
+   "id": "ec44feca",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3afc2f5",
+   "id": "f68e3517",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "71369d36",
+   "id": "4bb71d37",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6932ec06",
+   "id": "2e02503b",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf4ef15",
+   "id": "ed607460",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fdade84d",
+   "id": "5807dd04",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f93499",
+   "id": "56c13dc4",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0e0b5419",
+   "id": "9863d1e2",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604ff2b0",
+   "id": "140bbb4c",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "52f2c99d",
+   "id": "e2d847b5",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ceb8246",
+   "id": "6a571ceb",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45f5300",
+   "id": "0ecc57c3",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5850692b",
+   "id": "8aee5000",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96b4256",
+   "id": "92d448f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cab39bc8",
+   "id": "c4d0febe",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c0033e9",
+   "id": "753ba9c0",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5d9cd411",
+   "id": "73136662",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51094903",
+   "id": "0933e085",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "58d2d7fe",
+   "id": "94c7eb94",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5087445a",
+   "id": "2c6babfd",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820ac31b",
+   "id": "2fa1af17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8febc2e7",
+   "id": "d2a46087",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94dff52a",
+   "id": "22c4aaa9",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "100a6ea6",
+   "id": "4273d1ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "27782429",
+   "id": "dbfdc6ee",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "302c7d39",
+   "id": "2d32504d",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b97ea9f7",
+   "id": "303f1e14",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4cb5316b",
+   "id": "b05b5092",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "71479460",
+   "id": "78bc30db",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c2e88286",
+   "id": "a0870eda",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "67407454",
+   "id": "aa59a3fd",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "ac1311fa",
+   "id": "30f13d72",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "06c2971b",
+   "id": "bbba3d20",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "68e6e5b5",
+   "id": "a45690e9",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "48a30739",
+   "id": "dbc73424",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e5e13513",
+   "id": "d08c670d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0420a93b",
+   "id": "d4a0ddf3",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3fdf7846",
+   "id": "2d136029",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "da947314",
+   "id": "ff70bd0f",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "38ba0f01",
+   "id": "393f75b3",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "00c310c4",
+   "id": "edade4c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c2bc30dc",
+   "id": "fbe8ff12",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "08596572",
+   "id": "dc9b32f9",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d7973e75",
+   "id": "2b71e906",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "d55e3e2d",
+   "id": "50fee52b",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d56d28c",
+   "id": "248367cd",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "614ff507",
+   "id": "e66cf830",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "24622e2a",
+   "id": "28bad8e6",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "dfa4f53a",
+   "id": "b99686cb",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4428d63c",
+   "id": "63c3feeb",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "cc1dfcaf",
+   "id": "202f0129",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "a3119c2a",
+   "id": "b15d57cc",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea12a23",
+   "id": "574bccbb",
    "metadata": {},
    "source": [
     "# Mutable vs. immutable data\n",
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f26fcb7f",
+   "id": "a670103c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ecd8e4d4",
+   "id": "440ee37d",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2049,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "5ea9e285",
+   "id": "65cd4841",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "1a17d1f8",
+   "id": "dda8f5ab",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "5131aa3f",
+   "id": "d8caee83",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d27d7b0",
+   "id": "6db23090",
    "metadata": {},
    "source": [
     "# \"Changing\" is a bad term in Python\n",
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2dec482",
+   "id": "7b24b0a4",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "eee8ec53",
+   "id": "66b561e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "254e1df9",
+   "id": "5179659e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "14547614",
+   "id": "94adf1f7",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e427e5d1",
+   "id": "81b8dc09",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dacf305",
+   "id": "b57e2fc8",
    "metadata": {},
    "source": [
     "# `break` vs. `continue`\n",
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682f5832",
+   "id": "af62a8ae",
    "metadata": {},
    "source": [
     "# Splitting\n",
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "391356aa",
+   "id": "1f54fe71",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "edbea3bd",
+   "id": "de177a06",
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "63a66a1a",
+   "id": "9bc563be",
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0aa0fa27",
+   "id": "807c4afa",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "9e40b8af",
+   "id": "c2b30855",
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa5650d",
+   "id": "d76f0193",
    "metadata": {},
    "source": [
     "# Exercise: Odds and evens\n",
@@ -2449,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "8ae58d49",
+   "id": "0193de06",
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "0617de36",
+   "id": "22404cac",
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "9b1d599b",
+   "id": "7cc08c62",
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104cd175",
+   "id": "48cbdc8a",
    "metadata": {},
    "source": [
     "# From lists to strings with `str.join`\n",
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "9a270fc6",
+   "id": "dbb00670",
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0714dbe8",
+   "id": "94096677",
    "metadata": {},
    "source": [
     "# Exercise: Pig Latin sentence\n",
@@ -2595,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0f929913",
+   "id": "282a9664",
    "metadata": {},
    "outputs": [
     {
@@ -2621,10 +2621,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd400b0b",
+   "id": "cc5ab125",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# program from last time\n",
+    "\n",
+    "word = input('Enter a word: ').strip()\n",
+    "\n",
+    "if word[0] in 'aeiou':\n",
+    "    print(word + 'way')\n",
+    "else:\n",
+    "    print(word[1:] + word[0] + 'ay')"
+   ]
   }
  ],
  "metadata": {
